<resources>
    <string name="facebook_app_id">2800459153367638</string>
    <string name="dapp_name" translatable="false">Pando Browser</string>
    <string name="brave_settings_title">Pando settings for</string>
    <string name="brave_shields_down">Down</string>
    <string name="brave_shields_up">Up</string>
    <string name="brave_shields_ads_trackers">Ads and Trackers Blocked</string>
    <string name="brave_shields_https_upgrades">HTTPS Upgrades</string>
    <string name="brave_shields_scripts_blocked">Scripts Blocked</string>
    <string name="brave_shields_ads_tracking_switch">Block Ads and Tracking</string>
    <string name="brave_shields_https_everywhere_switch">HTTPS Everywhere</string>
    <string name="brave_shields_blocks_scripts_switch">Block Scripts</string>
    <string name="accessibility_toolbar_btn_brave_shields">Enable/Disable Pando Shields</string>
    <string name="brave_shields_block_3rd_party_cookies_switch">Block 3rd party cookies</string>
    <string name="httpse_summary">Opens supported sites using HTTPS instead of HTTP when possible</string>
    <string name="tracking_protection_title">Tracking Protection Mode</string>
    <string name="tracking_protection_summary">Prevents resources that track you from loading</string>
    <string name="ad_block_title">Ad Block</string>
    <string name="ad_block_summary">Prevents ads from loading</string>
    <string name="fingerprinting_protection_title">Fingerprinting Protection</string>
    <string name="fingerprinting_protection_summary">Prevents browser from fingerprinting</string>
    <string name="brave_shields_fingerprints_blocked">Fingerprinting Methods Blocked</string>
    <string name="brave_shields_block_fingerprints_switch">Fingerprinting Protection</string>
    <string name="ad_block_regional_title">Regional Ad Block</string>
    <string name="ad_block_regional_summary">Prevents regional ads from loading</string>
    <string name="ad_block_regional_summary_no_list">No additional lists available for your locale</string>
    <string name="menu_exit">Exit</string>
    <string name="brave_sync">Pando Sync</string>
    <string name="brave_sync_description">Sync browser data between your devices
securely using Pando Sync, no account
creation required. Tap below to get started.</string>
    <string name="brave_sync_have_existing_code">I have an existing sync code</string>
    <string name="sync_settings_add_device_name_title">Add device name</string>
    <string name="sync_settings_add_device_name_label">Enter an optional name for this device</string>
    <string name="sync_example_device_name">Android device</string>
    <string name="brave_sync_qrcode">Sync to device</string>
    <string name="brave_sync_qrcode_message">Using existing synced device open Pando
Settings and navigate to "Device &amp;
Settings", tap `+` to add a new device and
reveal sync code.</string>
    <string name="enter_code_words_sync">Enter code words</string>
    <string name="enter_code_words_below_sync">Enter code words below.</string>
    <string name="sync_device">Sync device</string>
    <string name="sync_device_failure">Sync could not be setup</string>
    <string name="sync_device_success">The sync setup has completed successfully</string>
    <string name="reset_sync">Reset Sync...</string>
    <string name="resetting_sync">Are you sure you want to reset this device Sync settings?</string>
    <string name="brave_stats_text_trackers">Trackers
Blocked</string>
    <string name="brave_stats_text_spyce">Spyce</string>
    <string name="brave_stats_text_ads">Ads
Blocked</string>
    <string name="brave_stats_text_https">HTTPS
Upgrades</string>
    <string name="brave_stats_text_time">Est. Time
Saved</string>
    <string name="send_metrics_title">Send metrics</string>
    <string name="desktop_mode_title">Desktop Mode</string>
    <string name="website_settings_category_desktop_view_enabled_summary">Prefer desktop version of sites</string>
    <string name="website_settings_category_desktop_view_disabled_summary">Prefer mobile version of sites</string>
    <string name="website_settings_category_desktop_view_enabled">Enable Desktop View for new tabs</string>
    <string name="website_settings_category_desktop_view_disabled">Use mobile versions of sites for new tabs (recommended)</string>
    <string name="brave_shields_first_group_title">Blocking Monitor</string>
    <string name="brave_shields_second_group_title">Individual Controls</string>
    <string name="brave_shields">Shields</string>
    <string name="brave_shields_ads_and_trackers">Ads and Trackers</string>
    <string name="brave_shields_fingerprint_methods">Fingerprint Methods</string>
    <string name="brave_shields_block_phishing_switch">Block Phishing</string>
    <string name="play_video_in_background_title">Background video playback</string>
    <string name="website_settings_category_play_video_in_background_enabled_summary">Enabled</string>
    <string name="website_settings_category_play_video_in_background_disabled_summary">Disabled</string>
    <string name="website_settings_category_play_video_in_background_enabled">Experimental. Enables play audio from video in background when tab is not active or device screen is turned off. Try to switch to desktop mode if this feature is not working.</string>
    <string name="settings_require_relaunch_notice">Your changes will take effect the next time you relaunch Pando</string>
    <string name="settings_require_relaunch_now">RELAUNCH NOW</string>
    <string name="settings_require_relaunch_later">LATER</string>
    <string name="play_yt_video_in_browser_title">Video playback in Pando</string>
    <string name="website_settings_category_play_yt_video_in_browser_enabled_summary">Enabled</string>
    <string name="website_settings_category_play_yt_video_in_browser_disabled_summary">Disabled</string>
    <string name="website_settings_category_play_yt_video_in_browser_enabled">If enabled, videos will be played in Pando instead of corresponding app</string>
    <string name="close_tabs_on_exit_title">Close tabs on exit</string>
    <string name="close_tabs_on_exit_summary">Don't persist tabs between browsing sessions</string>
    <string name="open_pages_in_custom_tabs_title">Open tabs in Custom Tabs</string>
    <string name="open_pages_in_custom_tabs_summary">Offer to open tabs in Custom Tabs</string>
    <string name="ddg_offer_title">Private search with DuckDuckGo?</string>
    <string name="ddg_offer_text">With private search, Pando will use DuckDuckGo to answer your searches while you are in this private tab. DuckDuckGo is a search engine that does not track your search history, enabling you to search privately.</string>
    <string name="ddg_offer_positive">Yes</string>
    <string name="ddg_offer_negative">No</string>
    <string name="ddg_offer_link">Learn about private search with DuckDuckGo</string>
    <string name="prefs_standard_search_engine">Standard Tab</string>
    <string name="prefs_private_search_engine">Private Tab</string>
    <string name="brave_open_in_private_tab">Open in private tab</string>
    <string name="brave_close_all_private_tabs">Close private tabs</string>
    <string name="brave_new_private_tab">New private tab</string>
    <string name="brave_new_tab_private_header">This is a Private Tab</string>
    <string name="brave_new_tab_private_message">Even though sites you visit in private tabs are not saved locally, they do not make you anonymous or invisible to your ISP, your employer, or to the sites you are visiting.</string>
    <string name="fre_welcome_title">Congratulations!</string>
    <string name="fre_welcome_text">Welcome to Pando's New Web 3.0</string>
    <string name="menu_add_to_bookmarks">Add to</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_mode_day">Day</string>
    <string name="menu_mode_night">Night</string>
    <string name="menu_night_mode">Night Mode</string>
    <string name="menu_osiris_statistics">Pando Statistics</string>
    <string name="day_theme_on">Day Mode On</string>
    <string name="day_theme_off">Day Mode Off</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="favorites_placeholder_summary">Your favorites will appear here</string>
    <string name="dashboard_popup_level">Level:</string>
    <string name="dashboard_popup_title">Welcome to Pando Web Browser</string>
    <string name="dashboard_popup_message">Enjoy seamless, swift, and secure transactions at your fingertips. Your data is protected with end-to-end encryption to guarantee that all types of transactions will always remain private and safe.</string>
    <string name="dashboard_popup_view_profile">View Profile</string>
    <string name="dashboard_popup_pando_mined">PANDO Mined</string>
    <string name="dashboard_popup_referral_earnings">Referral Earnings</string>
    <string name="dashboard_popup_mining_runtime">Mining Runtime</string>
    <string name="dashboard_popup_membership_balance">Total Balance</string>
    <string name="dashboard_popup_reward_dashboard">Reward Dashboard</string>
    <string name="dashboard_popup_member_dashboard">Member Dashboard</string>
    <string name="dashboard_popup_vpn">VPN</string>
    <string name="dashboard_popup_ads_mining">Ads Mining</string>
    <string name="login_already_have">Already have account?</string>
    <string name="login_button">Login</string>
    <string name="login_message">Welcome to your very own Pando Web Browser! You can now enjoy seamless, swift, and secure transactions at your fingertips.</string>
    <string name="login_email_label">Email</string>
    <string name="login_email_hint">Enter your email</string>
    <string name="login_password_label">Password</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_reset_device_id">Reset Device ID</string>
    <string name="login_needs_device_verification_title">Device Verification</string>
    <string name="login_needs_device_verification_message">You're using new device. Are you sure you want to login? You will be automatically logged out from existing device.</string>
    <string name="login_needs_device_verification_action_text">Continue</string>
    <string name="login_multiple_device_not_supported_title">Feature Not Supported</string>
    <string name="login_multiple_device_not_supported_message">Logging in on a multiple devices is only supported for users with plan.</string>
    <string name="login_multiple_device_not_supported_action_text">Ok</string>
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="two_fa_title">Two-Factor Authentication</string>
    <string name="two_fa_message">An OTP has been sent to you via email. Please enter the code below.</string>
    <string name="two_fa_continue">Continue</string>
    <string name="two_fa_cancel">Cancel</string>
    <string name="two_fa_resend_message">Resend OTP will be available in %d sec</string>
    <string name="two_fa_did_not_get_the_code">Didn't get the code?</string>
    <string name="two_fa_resend_action">Resend OTP Code</string>
    <string name="signup_donthaveaccount">Don't have account?</string>
    <string name="signup_button">Sign Up</string>
    <string name="reset_device_id_title">Reset Device ID</string>
    <string name="reset_device_id_message">Enter your email address you're using for your account  below and we will send verification code to reset your device id.</string>
    <string name="reset_device_id_email_label">Email</string>
    <string name="reset_device_id_email_hint">Enter your email</string>
    <string name="reset_device_id_continue">Continue</string>
</resources>