<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_bg_splash_pandora" />

    <ScrollView
        android:id="@+id/svContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <ImageButton
                android:id="@+id/ibtnClose"
                style="@style/ToolbarButton"
                android:background="@android:color/transparent"
                android:layout_gravity="end"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginTop="16dp"
                android:padding="10dp"
                android:src="@drawable/btn_close" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:adjustViewBounds="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/img_pandora_full_logo" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="32dp"
                style="@style/FreText"
                android:gravity="center"
                android:lineSpacingExtra="8.5sp"
                android:text="@string/login_message"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginStart="16dp"
                style="@style/FreText"
                android:text="@string/login_email_label"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/etEmail"
                android:background="@drawable/bg_edittext_pandora"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                style="@style/FreText"
                android:text="@string/login_password_label"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/etPassword"
                android:background="@drawable/bg_edittext_pandora"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cbRememberMe"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/login_remember_me" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnForgotPassword"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:padding="0dp"
                    android:text="@string/login_forgot_password"
                    android:textSize="12sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/btn_login_selector"
                android:gravity="center"
                android:text="@string/login_button"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textAllCaps="false" />

            <LinearLayout
                android:id="@+id/llSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    style="@style/FreText"
                    android:text="@string/signup_donthaveaccount"
                    android:textColor="@color/charcoal_grey"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:layout_marginStart="4dp"
                    android:text="@string/signup_button"
                    style="@style/FreText"
                    android:textColor="#3b60dc"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_marginTop="14dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black_alpha_24"/>

            <android.support.v7.widget.AppCompatButton
                android:layout_gravity="center"
                android:id="@+id/btnResetDeviceId"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:padding="0dp"
                android:textColor="#3b60dc"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:text="@string/login_reset_device_id"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>