<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_bg_splash_pandora" />

    <ScrollView
        android:id="@+id/svContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ibtnClose"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/btn_close" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/img_pandora_full_logo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:textColor="#1a1666"
                android:text="@string/two_fa_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:lineSpacingExtra="8.5sp"
                android:text="@string/two_fa_message"
                android:textSize="14sp" />

            <org.chromium.chrome.browser.pandora.widget.SquarePinField
                android:id="@+id/sfCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="16dp"
                android:cursorVisible="false"
                android:inputType="text"
                android:textSize="16sp"
                app:cornerRadius="8dp"
                app:fieldBgColor="#f9f9fb"
                app:fieldColor="#d8d4e1"
                app:highlightColor="#3b60dc"
                app:highlightSingleFieldMode="true"
                app:noOfFields="6" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <LinearLayout
                android:id="@+id/llResentOtpAvailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/two_fa_resend_message"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDidntGetTheCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="visible"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/two_fa_did_not_get_the_code"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:textColor="@color/resend_code_tint_color"
                    android:text="@string/two_fa_resend_action"
                    android:textSize="12sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/btn_login_selector"
                android:gravity="center"
                android:text="@string/two_fa_continue"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:gravity="center"
                android:text="@string/two_fa_cancel"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>