<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_bg_splash_pandora" />

    <ScrollView
        android:id="@+id/svContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:id="@+id/llRoot"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <ImageButton
                android:id="@+id/ibtnClose"
                style="@style/ToolbarButton"
                android:background="@android:color/transparent"
                android:layout_gravity="end"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginTop="16dp"
                android:padding="10dp"
                android:src="@drawable/btn_close" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:adjustViewBounds="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/img_pandora_full_logo" />

            <TextView
                android:id="@+id/textView2"
                style="@style/FreTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/reset_device_id_title"
                android:textSize="16sp"
                android:textColor="#1a1666"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                style="@style/FreText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:lineSpacingExtra="8.5sp"
                android:text="@string/reset_device_id_message"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView5"
                style="@style/FreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:text="@string/reset_device_id_email_label"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/etEmail"
                android:background="@drawable/bg_edittext_pandora"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/reset_device_id_email_hint"
                android:inputType="textEmailAddress" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="48dp"/>

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/btn_login_selector"
                android:gravity="center"
                android:text="@string/reset_device_id_continue"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textAllCaps="false" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>